# ChangeLog for dev-perl/Crypt-SSLeay
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Crypt-SSLeay/ChangeLog,v 1.11 2004/02/24 23:20:17 agriffis Exp $

  24 Feb 2004; <agriffis@gentoo.org> Crypt-SSLeay-0.49.ebuild:
  stable on alpha and ia64

  20 Jan 2004; <gustavoz@gentoo.org> Crypt-SSLeay-0.49.ebuild:
  stable on sparc

  18 Jan 2004; <tuxus@gentoo.org> Crypt-SSLeay-0.49.ebuild:
  Added ~mips to KEYWORDS.

  09 Jan 2004; Aron Griffis <agriffis@gentoo.org> Crypt-SSLeay-0.49.ebuild:
  stable on alpha

*Crypt-SSLeay-0.49 (08 Jun 2003)

  22 Jul 2003; Guy Martin <gmsoft@gentoo.org> Crypt-SSLeay-0.49.ebuild :
  Added hppa to KEYWORDS.

  08 Jun 2003; <rac@gentoo.org> Crypt-SSLeay-0.45-r1.ebuild,
  Crypt-SSLeay-0.45.ebuild, Crypt-SSLeay-0.49.ebuild:
  Fix headers, add IUSE, upstream version bump

*Crypt-SSLeay-0.45-r1 (21 Jun 2003)
 
  12 Jul 2003; Daniel Ahlberg <aliz@gentoo.org> :
  Added missing changelog entry.

*Crypt-SSLeay-0.45 (08 Sep 2002)

  08 09 2002; <mcummings@gentoo.org> Crypt-SSLeay-0.45.ebuild: Initial import