@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Crypt-SSLeay/Attic/Crypt-SSLeay-0.49.ebuild,v 1.8 2004/02/24 23:20:17 agriffis Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Crypt-SSLeay/Attic/Crypt-SSLeay-0.49.ebuild,v 1.9 2004/03/30 01:05:50 pylon Exp $
 
 inherit perl-module
 
@@ -10,7 +10,7 @@ HOMEPAGE="http://search.cpan.org/author/CHAMAS/Crypt-SSLeay-${PV}/"
 IUSE=""
 SLOT="0"
 LICENSE="Artistic | GPL-2"
-KEYWORDS="x86 amd64 alpha ~ppc sparc hppa ~mips ia64"
+KEYWORDS="x86 amd64 alpha ppc sparc hppa ~mips ia64"
 
 DEPEND="virtual/glibc
 	>=dev-lang/perl-5
