@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/libwww-perl/Attic/libwww-perl-5.76.ebuild,v 1.5 2004/03/14 11:30:10 mcummings Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/libwww-perl/Attic/libwww-perl-5.76.ebuild,v 1.6 2004/03/30 01:07:27 pylon Exp $
 
 inherit perl-module
 
@@ -10,7 +10,7 @@ HOMEPAGE="http://cpan.org/modules/by-module/WWW/${P}.readme"
 IUSE="ssl"
 SLOT="0"
 LICENSE="Artistic | GPL-2"
-KEYWORDS="~x86 ~amd64 ~ppc ~sparc alpha ~hppa ia64"
+KEYWORDS="~x86 ~amd64 ppc ~sparc alpha ~hppa ia64"
 
 newdepend ">=dev-perl/libnet-1.0703
 	>=dev-perl/HTML-Parser-3.34
