@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Crypt-SSLeay
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Crypt-SSLeay/ChangeLog,v 1.11 2004/02/24 23:20:17 agriffis Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Crypt-SSLeay/ChangeLog,v 1.12 2004/03/30 01:05:50 pylon Exp $
+
+  30 Mar 2004; Lars Weiler <pylon@gentoo.org> Crypt-SSLeay-0.49.ebuild:
+  stable on ppc
 
   24 Feb 2004; <agriffis@gentoo.org> Crypt-SSLeay-0.49.ebuild:
   stable on alpha and ia64
